* JEXL-365:     Lambda expressions
* JEXL-363:     Allow retrieving captured variables in script
* JEXL-360:     Add missing bitshift operators ( >>, >>>, <<)
* JEXL-359:     Allow per-operator arithmetic handling of null arguments
* JEXL-357:     Configure accessible packages/classes/methods/fields

Bugs Fixed in 3.3:
==================
* JEXL-378:     Incremental operator and decremental operator do not honor the side-effect flag
* JEXL-376:     Introspector captures methods on non-exported classes (modules, java9+)
* JEXL-375:     Cannot access enums by their name when using sandbox
* JEXL-374:     No exception if dereferencing null object using safe(false) and antish(false)
* JEXL-371:     Override of a protected method with public visibility is not callable
* JEXL-370:     Cannot check if variable is defined using ObjectContext if the value is null
* JEXL-368:     Namespace functor resolution is not cached
* JEXL-364:     Evaluator options not propagated in closures
* JEXL-362:     JexlInfo position reporting is off
* JEXL-361:     Null may be used as operand silently even in arithmetic strict(true) mode
* JEXL-354:     #pragma does not handle negative integer or real literals
* JEXL-353:     Documentation error for not-in/not-match operator

========================================================================================================================
Release 3.2.1
========================================================================================================================

Version 3.2.1 is a maintenance release.

Compatibility with previous releases
====================================
Version 3.2.1 is source and binary compatible with 3.2.

Bugs Fixed in 3.2.1:
==================
* JEXL-352:      Possible memory leak regarding parser jjtree nodes in JEXL 3.2
* JEXL-351:      JXLT Template fails when using sandboxing
* JEXL-350:      map[null] throws "unsolvable property" when a Sandbox is used
